# daemon

./: Cargo.toml  Phlox_communication_protocol.md
appd/: Cargo.toml
appd/src/: main.rs  server.rs
appd/src/client/: mod.rs
appd/src/device/: mod.rs
appd/src/error/: mod.rs
appd/src/platform/: linux.rs  mod.rs  windows.rs
appd/src/protocol/: mod.rs
appd/src/session/: mod.rs
appd/src/transport/: mod.rs  stream.rs
device-lib/: Cargo.toml
device-lib/src/: device_info.rs  error.rs  lib.rs  manager.rs  traits.rs  types.rs
device-lib/src/devices/: appi.rs  appi2.rs  appi_common.rs  mod.rs  phlox.rs  phlox_common.rs
