[package]
name    = "appd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "appd"
path = "src/main.rs"

[dependencies]
device-lib         = { path = "../device-lib" }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
dashmap            = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror          = { workspace = true }
